--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
     "test": "./node_modules/ts-node/dist/bin.js --skip-project scripts/test.ts"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.0.0",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
     "@compodoc/compodoc": "^1.1.10",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -81,20 +81,21 @@
     "plotly.js": "^1.50.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
+    "tslib": "^1.10.0",
     "typescript-logging": "^0.6.3",
     "xlsx": "^0.15.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular-devkit/build-ng-packagr": "^0.803.25",
-    "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-ng-packagr": "~0.900.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@types/jasmine": "~3.4.3",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonfile": "^5.0.0",
-    "@types/node": "~12.7.12",
+    "@types/node": "^12.11.1",
     "@types/ol": "^5.3.5",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
@@ -105,12 +106,10 @@
     "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.6.1",
+    "ng-packagr": "^9.0.0",
     "protractor": "^5.4.2",
     "ts-node": "^8.4.1",
-    "tsickle": "^0.37.0",
-    "tslib": "^1.9.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.5"
   }
 }
