--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,8 +7,8 @@
       "node"
     ]
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
   ]
 }
